Create get_topstories_with_comments method. There's no endpoint on HackerNews API that allow us to get all top stories and its comments at the same time. Then I am using grequests (gevent + requests) so we make async http requests. (still can be improved right now 2.3 sec to load with 10 top stories and 3 comments each max)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,4 +9,9 @@
 
 {% block content %}
   <h1>Hello, Bootstrap</h1>
+
+  {% for story in context.topstories %}
+  	{{ story.title }} <br/>
+  {% endfor %}
+
 {% endblock %}
