Refactor a HackerNewsAPI class. There's no need to load topstories with all their comments all at once. Instead let's load all the detailed topstories (without comments) and then once on detail story we do fetch and present its comments.

--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -10,8 +10,10 @@
 {% block content %}
   <h1>Hello, Bootstrap</h1>
 
-  {% for story in context.topstories %}
-  	{{ story.title }} | <a href="/detail/{{ story.id }}">{{ story.id }}</a><br/>
+  {{ context.story.title }} | {{ context.story.id }}<br/>
+
+  {% for comment in context.comments %}
+  	{{ comment.id }} | {{ comment.text }}
   {% endfor %}
 
 {% endblock %}
