Polling method implemented. Content gets translated using Unbabel API (Sandbox) Next step: implement cache system (mongodb)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,20 +49,43 @@
 		});
 	}
 
-	function poolingResultsUnbabel(){
-		// could have developed an endpoint and subscribe it unbabel api in order to receive data when translations get done ...
-		$.ajax({
-			  url: "/api/get-translations/" + requested_translations.join(','),
-			  type: 'GET',
-			  contentType:"application/json; charset=utf-8",
-				dataType:"json"
-		}).success(function(data) {
-			console.log('success - get');
-			console.log(data);
+	function checkTranslationsStatus(data, num_items){
+		if (data.length > 0 && data.length == num_items) {
+			return data.every(function(elem) { return true ? elem.status == 'completed' : false });
+		}
+		return false;
+	}
+
+	function pollingResultsUnbabel(){
+			console.log('polling translations...');
+			polling_every = 3000 // milliseconds
+			setTimeout(function(){
+				if (!is_done) {
+			    $.ajax({ 
+			    	url: "/api/get-translations/" + requested_translations.join(','), 
+			    	contentType:"application/json; charset=utf-8",
+			    	dataType: "json",
+						success: function(data){
+			        is_done = checkTranslationsStatus(data, requested_translations.length);
+			        response = data;
+			    	}, complete: pollingResultsUnbabel, timeout: 2000
+			    });
+			  } else {
+			  	console.log('translations received...');
+			  	translateTitles(response);
+			  }
+			}, polling_every);
+	}
+
+	function translateTitles(data){
+		console.log('translating content');
+		$.each(data, function(i, v){
+			$('*[data-default="' + v.text +'"]').html(v.translatedText);
 		});
 	}
 
 	function requestTranslations(texts, target_lang){
+		console.log('requesting translations...');
 		$.ajax({
 			  url: "/api/request-translation",
 			  type: 'POST',
@@ -70,13 +93,12 @@
 				dataType:"json",
 			  data: JSON.stringify({'texts': texts, 'source_lang': 'en', 'target_lang': target_lang})
 			}).success(function(data) {
-			  console.log('success - request');
-			  console.log(data);
 			  requested_translations = data;
-
-			  // start pooling here ...
-			  poolingResultsUnbabel();
-
+			  console.log('translations requested successfully.');
+			  // start polling results
+			  is_done = false;
+			  response = [];
+				pollingResultsUnbabel();
 			});
 	}
 
